fixed about section spacing

--- a/styles.css
+++ b/styles.css
@@ -284,7 +284,7 @@ html {
   .top-container, .bottom-container {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     height: 100%;
   }
